--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,8 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--backgroud-color);
+    background-size: contain;
+    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 0%), url("../images/team.jpg");
 }
 .hero h1 {
     color: var(--white-color);
