--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ body {
     justify-content: space-around;
     align-items: center;
     background-size: contain;
-    background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 0%), url("../images/team.jpg");
+a(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 0%), url("../images/team.jpg");    background-image: linear-gradient(90deg, rgb
 }
 .hero h1 {
     color: var(--white-color);
