--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,10 @@ body {
     background-color: var(--hover-color);
     color: var(--white-color);
 }
+.button-shadow:hover,
+.option-shadow:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 /* Zastosowanie Header */
 .brand-link {
     font-family: 'Raleway';
@@ -248,9 +252,11 @@ body {
     display: flex;
     list-style: none;
     background-color: #f5f4fa;
-    box-shadow: 0px 1px 3px rgba(0,0,0,0,14), 0px 1px 1px rgba(0,0,0,0,14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+        border-radius: 0px 0px 4px 4px;
     padding-left: 4px;
+}
+.shad {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.14), 0px 1px 1px rgba(0, 0 ,0 ,0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 /* Zastosowanie Footer bez Brand Logo */
 .address-link {
@@ -336,6 +342,9 @@ body {
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
 }
+.card-set:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 /* ikony */
 .icon {
     fill: var(--main-color);
@@ -372,4 +381,22 @@ body {
     letter-spacing: 0.03em;
     margin-bottom: 0;
     padding-bottom: 50px;
+}
+/* Zastosowanie SoMe */
+.join {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--white-color);
+}
+.mediaw {
+    fill: var(--white-color);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 100%;
+    cursor: pointer;
+}
+.mediaw:hover {
+    background: var(--hover-color);
 }
